--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "lucide-react": "^0.263.1",
         "next": "13.4.13",
         "next-themes": "^0.2.1",
+        "prisma": "^5.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "tailwind-merge": "^1.14.0",
