--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "format": "prettier --write ./src"
     },
     "dependencies": {
+        "@prisma/client": "5.2.0",
         "@radix-ui/react-aspect-ratio": "^1.0.3",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
         "@radix-ui/react-navigation-menu": "^1.1.3",
