--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "clsx": "^2.0.0",
         "lucide-react": "^0.263.1",
         "next": "13.4.13",
+        "next-auth": "^4.23.1",
         "next-themes": "^0.2.1",
         "prisma": "^5.2.0",
         "react": "18.2.0",
