--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@auth/prisma-adapter": "^1.0.2",
         "@prisma/client": "5.2.0",
         "@radix-ui/react-aspect-ratio": "^1.0.3",
+        "@radix-ui/react-avatar": "^1.0.3",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
         "@radix-ui/react-navigation-menu": "^1.1.3",
         "@radix-ui/react-separator": "^1.0.3",
